--- a/.env.production
+++ b/.env.production
@@ -1,26 +1,57 @@
 # 服务器基本配置
 PORT=3000                                  # 应用运行端口
 NODE_ENV=production                        # 环境标识
-API_URL=http://guyongfeng.cn         # API 基础地址
 
 # JWT（JSON Web Token）配置
 JWT_SECRET_KEY=prod-huixue-jiaopei-2024-secure-key-should-be-very-long  # JWT 密钥
 JWT_EXPIRES_IN=1d                         # Token 过期时间（1天）
 
-# 数据库配置
-DB_HOST=localhost                         # 数据库主机地址
-DB_USER=education_system                              # 数据库用户名
-DB_PASSWORD=H3SP6PZNZaX7jmrS                  # 数据库密码
-DB_DATABASE=education_system                  # 数据库名称
-DB_PORT=3306                             # 数据库端口
+# 天津数据库
+TJ_DB_HOST=localhost
+TJ_DB_USER=education_system
+TJ_DB_PASSWORD=CmfpYmxHr7WK8taF
+TJ_DB_DATABASE=tj_education_system
+
+# 北京数据库
+BJ_DB_HOST=localhost
+BJ_DB_USER=education_system
+BJ_DB_PASSWORD=CmfpYmxHr7WK8taF
+BJ_DB_DATABASE=bj_education_system
+
+# 上海数据库
+SH_DB_HOST=localhost
+SH_DB_USER=education_system
+SH_DB_PASSWORD=CmfpYmxHr7WK8taF
+SH_DB_DATABASE=sh_education_system
+
+# 西安数据库
+XA_DB_HOST=localhost
+XA_DB_USER=education_system
+XA_DB_PASSWORD=CmfpYmxHr7WK8taF
+XA_DB_DATABASE=xa_education_system
+
+# 南京数据库
+NJ_DB_HOST=localhost
+NJ_DB_USER=education_system
+NJ_DB_PASSWORD=CmfpYmxHr7WK8taF
+NJ_DB_DATABASE=nj_education_system
+
+# 武汉数据库
+WH_DB_HOST=localhost
+WH_DB_USER=education_system
+WH_DB_PASSWORD=CmfpYmxHr7WK8taF
+WH_DB_DATABASE=wh_education_system
+
+# 数据库端口
+DB_PORT=3306
 
 # 日志配置
-LOG_LEVEL=error                          # 日志级别（生产环境只记录错误）
+LOG_LEVEL=error                          
 
 # 跨域配置
-CORS_ORIGIN=http://www.guyongfeng.com    # 允许跨域的源
+CORS_ORIGIN=http://www.guyongfeng.com    
 
 # Redis配置（可选）
-REDIS_HOST=localhost                     # Redis主机地址
-REDIS_PORT=6379                         # Redis端口
-REDIS_PASSWORD=                         # Redis密码（如果有）
+REDIS_HOST=localhost                     
+REDIS_PORT=6379                         
+REDIS_PASSWORD=                         
